[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Main/CO_MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Core/SC_SceneTransition.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.5857
margin_top = -91.5
margin_right = 49.4143
margin_bottom = -71.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Retro Magic"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -40.0
margin_right = 50.0
margin_bottom = -20.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -10.0
margin_right = 50.0
margin_bottom = 10.0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 40.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneTransition" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
